added layout box

--- a/index.html
+++ b/index.html
@@ -10,6 +10,123 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+
+    <header>
+         <div class="container">
+            <h1></h1>
+            <div class="flex">
+                <div class="small-box "></div>
+                <div class="large-box"></div>
+            </div>
+        </div>
+    </header>
+
+    <nav class="padding">
+        <div class="navbar">
+            <div class="navbar-left padding"></div>
+            <div class="navbar-right padding"></div>
+        </div>
+    </nav>
+
+    <main>
+        <section class="content">
+            <h2></h2>
+            <div></div>
+            <div class="row padding">
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card "></div>
+                </div>
+                <div class="col sium padding">
+                    <div class="card"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="content partner flex">
+                <div class="small-box"></div>
+                <div class="large-box"></div>
+        </section>
+
+        <section class="content operations">
+            <div class="row padding">
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+                <div class="col padding">
+                    <div class="card"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="content team ">
+            <h3></h3>
+            <a href="#"></a>
+        </section>
+
+        <section class="company-partner">
+            <div class="flex">
+                <div class="side">
+                    <div class="col-company border"></div>
+                    <div class="col-company border"></div>
+                    <div class="col-company border"></div>
+                    <div class="col-company border"></div>
+                </div>
+                <div class="center">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="side">
+                    <div class="col-company border"></div>
+                    <div class="col-company border"></div>
+                    <div class="col-company border"></div>
+                    <div class="col-company border"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="azienda">
+            <div class="content flex">
+                <div class="small-box "></div>
+                <div class="large-box"></div>
+            </div>
+        </section>
+
+        <section class="faq content  padding">
+            <h3></h3>
+            <div class="faq-row border"></div>
+            <div class="faq-row border"></div>
+            <div class="faq-row border"></div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="row-footer container  padding">
+            <div class="col-footer border"></div>
+            <div class="col-footer border"></div>
+            <div class="col-footer border"></div>
+            <div class="col-footer border"></div>
+            <div class="col-footer  border"></div>
+        </div>
+    </footer>
 </body>
 </html>
