--- a/index.html
+++ b/index.html
@@ -11,24 +11,38 @@
 </head>
 <body>
 
-    <header>
-         <div class="container">
-            <h1></h1>
-            <div class="flex">
-                <div class="small-box "></div>
-                <div class="large-box"></div>
-            </div>
-        </div>
-    </header>
 
-    <nav class="padding">
-        <div class="navbar">
-            <div class="navbar-left padding"></div>
-            <div class="navbar-right padding"></div>
-        </div>
+
+<header id="main-header">
+    <nav class="navbar-left">
+        <ul>
+            <li><a href="#"><img src="img/logo-small.png" alt=""></a></li>
+            <li><a href="#">Perchè Dropbox</a></li>
+            <li><a href="#">Funzioni</a></li>
+            <li><a href="#">Piano e Prezzi</a></li>
+        </ul>
     </nav>
+    <nav class="navbar-right">
+        <ul>
+            <li><a href="#">Supporto</a></li>
+            <li><a href="#">Contatta l'ufficio vendite</a></li>
+            <li><a href="#">Accedi</a></li>
+            <li><a href="#" class="btn-small">Inizia</a></li>
+        </ul>
+    </nav>
+</header>
 
     <main>
+        <section class="jumbotron">
+            <div class="container">
+                <h1></h1>
+                <div class="flex">
+                    <div class="small-box "></div>
+                    <div class="large-box"></div>
+                </div>
+            </div>
+        </section>
+
         <section class="content">
             <h2></h2>
             <div></div>
