--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
 <header id="main-header">
     <nav class="navbar-left">
         <ul>
-            <li><a href="#"><img src="img/logo-small.png" alt=""></a></li>
+            <li><a href="#"><img src="img/logo-small.png" alt="logo Dropbox"></a></li>
             <li><a href="#">Perchè Dropbox</a></li>
             <li><a href="#">Funzioni</a></li>
             <li><a href="#">Piano e Prezzi</a></li>
@@ -27,7 +28,7 @@
             <li><a href="#">Supporto</a></li>
             <li><a href="#">Contatta l'ufficio vendite</a></li>
             <li><a href="#">Accedi</a></li>
-            <li><a href="#" class="btn-small">Inizia</a></li>
+            <li><a href="#" class="btn btn-small">Inizia</a></li>
         </ul>
     </nav>
 </header>
@@ -35,10 +36,17 @@
     <main>
         <section class="jumbotron">
             <div class="container">
-                <h1></h1>
-                <div class="flex">
-                    <div class="small-box "></div>
-                    <div class="large-box"></div>
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="row">
+                    <div class="small-box">
+                        <p class="mb-30">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <a href="#" class="btn btn-large mb-30">Inizia la tua prova gratuita</a>
+                        <p class="mb-70">Annulla in qualsiasi momento</p>
+                        <i class="fa-solid fa-arrow-down fa-3x"></i>
+                    </div>
+                    <div class="large-box">
+                        <img class="sium" src="img/jumbo.png" alt="home Dropbox">
+                    </div>
                 </div>
             </div>
         </section>
