--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="jumbotron">
             <div class="container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="row">
+                <div class="row-jumbotron">
                     <div class="small-box">
                         <p class="mb-30">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <a href="#" class="btn btn-large mb-30">Inizia la tua prova gratuita</a>
@@ -51,48 +51,114 @@
             </div>
         </section>
 
-        <section class="content">
-            <h2></h2>
-            <div></div>
-            <div class="row padding">
-                <div class="col padding">
-                    <div class="card"></div>
+        <section class="content Business">
+            <h2 class="mb-30">Trova il piano business che fa per te</h2>
+            <p class="mb-30">Fatturazione mensile <span>Fatturazione annuale</span></p>
+            <div class="row-business">
+                <div class="col border">
+                    <h3><i class="fa-solid fa-user"></i>Singolo</h3>
+                    <div class="card ">
+                        <h4 class="mb-20">Professional</h4>
+                        <p class="price mb-10">€ 12.00</p>
+                        <p class="mese mb-40">/mese</p>
+                        <ul class="mb-40">
+                            <li><i class="fa-solid fa-user"></i>1 utente</li>
+                            <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
+                            <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                        </ul>
+                        <a href="#" class="btn btn-large mb-30">Prova gratis per 30 giorni</a>
+                        <p>oppure<a href="#" class="link">acquista ora</a></p>
+                        <div class="line"></div>
+                        <h5 class="mb-30">Punti Salienti del piano</h5>
+                        <ul>
+                            <li><i class="fa-solid fa-check"></i>Invia file fino a 100GB con Dropbox Transfert</li>
+                            <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col padding">
-                    <div class="card"></div>
+                <div class="col border">
+                    <h3><i class="fa-solid fa-user"></i>Team</h3>
+                    <div class="card ">
+                        <h4 class="mb-20">Advanced</h4>
+                        <p class="price mb-10">€ 18.00</p>
+                        <p class="mese mb-40">/utente/mese</p>
+                        <ul class="mb-40">
+                            <li><i class="fa-solid fa-user"></i>3 o più utenti</li>
+                            <li><i class="fa-solid fa-folder"></i>Tuttp lo spazio di cui ha bisogno il tuo team</li>
+                            <li><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
+                        </ul>
+                        <a href="#" class="btn btn-large mb-30">Prova gratis per 30 giorni</a>
+                        <p>oppure<a href="#" class="link">acquista ora</a></p>
+                        <div class="line"></div>
+                        <h5 class="mb-30">Punti Salienti del piano</h5>
+                        <ul>
+                            <li><i class="fa-solid fa-check"></i>Nessun limite di spazio per i file</li>
+                            <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check"></i>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                            <li><i class="fa-solid fa-check"></i>Possibilità di inserire nuovi membri del team</li>
+                            <li><i class="fa-solid fa-check"></i>Gestione dei permessi in base ai ruoli</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col padding">
-                    <div class="card "></div>
+                <div class="col border">
+                    <h3><i class="fa-solid fa-building"></i>Azienda</h3>
+                    <div class="card ">
+                        <h4 class="mb-20">Enterprise</h4>
+                        <p class="price mb-10">Contattaci</p>
+                        <p class="mese mb-40">-</p>
+                        <ul class="mb-40">
+                            <li><i class="fa-solid fa-user"></i>1o o più utenti</li>
+                            <li><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</li>
+                            <li><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                        </ul>
+                        <a href="#" class="btn btn-contattaci mb-30">Contattaci</a>
+                        <p>oppure<a href="#" class="link">acquista ora</a></p>
+                        <div class="line"></div>
+                        <h5 class="mb-30">Punti Salienti del piano</h5>
+                        <ul>
+                            <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check"></i>Servizio assistenza 24/h</li>
+                            <li><i class="fa-solid fa-check"></i>Possibilità di personalizzazione totale</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col sium padding">
-                    <div class="card"></div>
+                <div class="full-col border">
+                    <h3><i class="fa-solid fa-building"></i>Team</h3>
+                    <div class="full-card ">
+                        <div class="card-left">
+                            <h4 class="mb-20">Enterprise</h4>
+                            <p class="mb-30 bold">Contatta l'ufficio vendite per i prezzi</p>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                        </div>
+                        <div class="card-right"><a class="btn btn-xl" href="#">Contatta l'ufficio vendite</a></div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="content partner flex">
-                <div class="small-box"></div>
-                <div class="large-box"></div>
+                <div class="small-box border padding"></div>
+                <div class="large-box border padding"></div>
         </section>
 
         <section class="content operations">
-            <div class="row padding">
-                <div class="col padding">
+            <div class="row-operations border">
+                <div class="col-operations border">
                     <div class="card"></div>
                 </div>
-                <div class="col padding">
+                <div class="col-operations border">
                     <div class="card"></div>
                 </div>
-                <div class="col padding">
+                <div class="col-operations border">
                     <div class="card"></div>
                 </div>
-                <div class="col padding">
+                <div class="col-operations border">
                     <div class="card"></div>
                 </div>
-                <div class="col padding">
+                <div class="col-operations border">
                     <div class="card"></div>
                 </div>
-                <div class="col padding">
+                <div class="col-operations border">
                     <div class="card"></div>
                 </div>
             </div>
