--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <div class="container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="row-jumbotron">
-                    <div class="small-box">
+                    <div class="col-30">
                         <p class="mb-30">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <a href="#" class="btn btn-large mb-30">Inizia la tua prova gratuita</a>
                         <p class="mb-70">Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down fa-3x"></i>
                     </div>
-                    <div class="large-box">
+                    <div class="col-70">
                         <img class="sium" src="img/jumbo.png" alt="home Dropbox">
                     </div>
                 </div>
@@ -136,9 +136,15 @@
             </div>
         </section>
 
-        <section class="content partner flex">
-                <div class="small-box border padding"></div>
-                <div class="large-box border padding"></div>
+        <section class="content partner">
+            <div class="col-60">
+                <img src="img/partner.png" alt="">
+            </div>
+            <div class="col-40">
+                <h4 class="mb-20">Entra in contatto con un partner Dropbox</h4>
+                <p class="mb-50">Trova un partner Dropbox e Hellosign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazioni, integrazioni, gestione e supporto continui.</p>
+                <a class="btn-partner" href="#">Trova un partner</a>
+            </div>
         </section>
 
         <section class="content operations">
