--- a/index.html
+++ b/index.html
@@ -148,24 +148,49 @@
         </section>
 
         <section class="content operations">
-            <div class="row-operations border">
-                <div class="col-operations border">
-                    <div class="card"></div>
+            <h2 class="mb-20">Esegui più operazioni con Dropbox Business</h2>
+            <div class="row-operations">
+                <div class="col-operations ">
+                    <div class="card-operations">
+                        <img class="mb-10" src="img/business-feature-switching-tools.png" alt="">
+                        <h4 class="mb-20">Passa di meno da uno strumento all'altro </h4>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
-                <div class="col-operations border">
-                    <div class="card"></div>
+                <div class="col-operations">
+                    <div class="card-operations">
+                        <img class="mb-10" src="img/business-feature-send-files-it.png" alt="">
+                        <h4 class="mb-20">Passa di meno da uno strumento all'altro </h4>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
-                <div class="col-operations border">
-                    <div class="card"></div>
+                <div class="col-operations">
+                    <div class="card-operations">
+                        <img class="mb-10" src="img/business-feature-coordinate-it.png" alt="">
+                        <h4 class="mb-20">Passa di meno da uno strumento all'altro </h4>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
-                <div class="col-operations border">
-                    <div class="card"></div>
+                <div class="col-operations">
+                    <div class="card-operations">
+                        <img class="mb-10" src="img/business-feature-integrations-it.png" alt="">
+                        <h4 class="mb-20">Passa di meno da uno strumento all'altro </h4>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
-                <div class="col-operations border">
-                    <div class="card"></div>
+                <div class="col-operations">
+                    <div class="card-operations">
+                        <img class="mb-10" src="img/business-feature-multi-device.png" alt="">
+                        <h4 class="mb-20">Passa di meno da uno strumento all'altro </h4>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
-                <div class="col-operations border">
-                    <div class="card"></div>
+                <div class="col-operations">
+                    <div class="card-operations">
+                        <img class="mb-10" src="img/business-feature-security.png" alt="">
+                        <h4 class="mb-20">Passa di meno da uno strumento all'altro </h4>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
             </div>
         </section>
