--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section class="content operations">
+        <section class="content operations mb-70">
             <h2 class="mb-20">Esegui più operazioni con Dropbox Business</h2>
             <div class="row-operations">
                 <div class="col-operations ">
@@ -195,9 +195,9 @@
             </div>
         </section>
 
-        <section class="content team ">
-            <h3></h3>
-            <a href="#"></a>
+        <section class="content team mb-50">
+            <h3 class="mb-50">Più di 500.000 team utilizzano <br>Dropbox Business</h3>
+            <a class="link" href="#">Scopri di più sui nostri clienti</a>
         </section>
 
         <section class="company-partner">
@@ -209,9 +209,9 @@
                     <div class="col-company border"></div>
                 </div>
                 <div class="center">
-                    <h3></h3>
-                    <p></p>
-                    <p></p>
+                    <img id="designit" src="img/designit.svg" alt="">
+                    <div class="line"></div>
+                    <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper</p>
                     <p></p>
                 </div>
                 <div class="side">
@@ -224,9 +224,9 @@
         </section>
 
         <section class="azienda">
-            <div class="content flex">
-                <div class="small-box "></div>
-                <div class="large-box"></div>
+            <div class="content row-azienda">
+                <h2 class="col-70">Porta Dropbox Business <br>nella tua azienda</h2>
+                <div class="col-30"><a class=" btn-azienda" href="#">Inizia la tua prova gratuita</a></div>
             </div>
         </section>
 
@@ -239,13 +239,62 @@
     </main>
 
     <footer>
-        <div class="row-footer container  padding">
-            <div class="col-footer border"></div>
-            <div class="col-footer border"></div>
-            <div class="col-footer border"></div>
-            <div class="col-footer border"></div>
-            <div class="col-footer  border"></div>
+        <div class="container">
+            <div class="row-footer ">
+                <div class="col-footer">
+                    <h6 class="mb-30">Dropbox</h6>
+                    <ul class="footer-list">
+                        <li><a class="c-white" href="#">Applicazioni Desktop</a></li>
+                        <li><a class="c-white" href="#">Perchè Dropbox</a></li>
+                        <li><a class="c-white" href="#">Piani</a></li>
+                        <li><a class="c-white" href="#">Sicurezza</a></li>
+                        <li><a class="c-white" href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h6 class="mb-30">Prodotti</h6>
+                    <ul class="footer-list">
+                        <li><a class="c-white" href="#">Applicazioni Desktop</a></li>
+                        <li><a class="c-white" href="#">Perchè Dropbox</a></li>
+                        <li><a class="c-white" href="#">Piani</a></li>
+                        <li><a class="c-white" href="#">Sicurezza</a></li>
+                        <li><a class="c-white" href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h6 class="mb-30">Azienda</h6>
+                    <ul class="footer-list">
+                        <li><a class="c-white" href="#">Applicazioni Desktop</a></li>
+                        <li><a class="c-white" href="#">Perchè Dropbox</a></li>
+                        <li><a class="c-white" href="#">Piani</a></li>
+                        <li><a class="c-white" href="#">Sicurezza</a></li>
+                        <li><a class="c-white" href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h6 class="mb-30">Supporto</h6>
+                    <ul class="footer-list">
+                        <li><a class="c-white" href="#">Applicazioni Desktop</a></li>
+                        <li><a class="c-white" href="#">Perchè Dropbox</a></li>
+                        <li><a class="c-white" href="#">Piani</a></li>
+                        <li><a class="c-white" href="#">Sicurezza</a></li>
+                        <li><a class="c-white" href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-footer">
+                    <h6 class="mb-30">Community</h6>
+                    <ul class="footer-list">
+                        <li><a class="c-white" href="#">Applicazioni Desktop</a></li>
+                        <li><a class="c-white" href="#">Perchè Dropbox</a></li>
+                        <li><a class="c-white" href="#">Piani</a></li>
+                        <li><a class="c-white" href="#">Sicurezza</a></li>
+                        <li><a class="c-white" href="#">Funzioni</a></li>
+                    </ul>
+                </div>
         </div>
+            <div class="line-footer"></div>
+            <div class="c-gray"><i class="fa-solid fa-earth-americas"></i>Italiano<i class="fa-solid fa-sort-up"></i></div>
+
     </footer>
 </body>
 </html>
