--- a/index.html
+++ b/index.html
@@ -225,16 +225,16 @@
 
         <section class="azienda">
             <div class="content row-azienda">
-                <h2 class="col-70">Porta Dropbox Business <br>nella tua azienda</h2>
+                <h2 class="col-70">Porta Dropbox Business nella tua azienda</h2>
                 <div class="col-30"><a class=" btn-azienda" href="#">Inizia la tua prova gratuita</a></div>
             </div>
         </section>
 
-        <section class="faq content  padding">
-            <h3></h3>
-            <div class="faq-row border"></div>
-            <div class="faq-row border"></div>
-            <div class="faq-row border"></div>
+        <section class="faq content  mb-70">
+            <h3>Domande Frequenti</h3>
+            <div class="faq-row">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?<i class="fa-solid fa-chevron-down"></i></div>
+            <div class="faq-row">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?<i class="fa-solid fa-chevron-down"></i></div>
+            <div class="faq-row">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?<i class="fa-solid fa-chevron-down"></i></div>
         </section>
     </main>
 
