added a company section

--- a/index.html
+++ b/index.html
@@ -201,25 +201,25 @@
         </section>
 
         <section class="company-partner">
-            <div class="flex">
-                <div class="side">
-                    <div class="col-company border"></div>
-                    <div class="col-company border"></div>
-                    <div class="col-company border"></div>
-                    <div class="col-company border"></div>
+            <div class="col-company side">
+                <div class="box-company bg-a2d39b"><div class="bg-img bg-designit"></div></div>
+                <div class="box-company bg-61082b"><div class="bg-img bg-asu"></div></div>
+                <div class="box-company bg-0093ce"><div class="bg-img bg-uf"></div></div>
+                <div class="box-company bg-ff1c1c"><div class="bg-img bg-topps"></div></div>
                 </div>
-                <div class="center">
-                    <img id="designit" src="img/designit.svg" alt="">
-                    <div class="line"></div>
-                    <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper</p>
-                    <p></p>
-                </div>
-                <div class="side">
-                    <div class="col-company border"></div>
-                    <div class="col-company border"></div>
-                    <div class="col-company border"></div>
-                    <div class="col-company border"></div>
-                </div>
+            </div>
+            <div class="col-company center bg-f5f5f5">
+                <img id="designit-logo" src="img/designit.svg" alt="">
+                <div class="line"></div>
+                <p class="mb-30">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                <p>Morten Thomsen, Global IT Lead</p>
+            </div>
+            <div class="col-company side border">
+                <div class="box-company bg-d5001f"><div class="bg-img bg-wbr"></div></div>
+                <div class="box-company bg-b4d0e7"><div class="bg-img bg-hearts"></div></div>
+                <div class="box-company bg-0d2481"><div class="bg-img bg-lp"></div></div>
+                <div class="box-company bg-ffd830"><div class="bg-img bg-cco"></div></div>
+            </div>
             </div>
         </section>
 
